[Fix/Style] -- Secondary nav in header alignment fix
Alignment for secondary nav was thrown off after fixing accessibility nav tag. This realigns the element with the search component in the upper header region.

--- a/src/stories/Organisms/Header/Header.css
+++ b/src/stories/Organisms/Header/Header.css
@@ -66,12 +66,14 @@
   justify-content: right !important;
 }
 
-.header__secondary-nav > div {
+.header__secondary-nav > div,
+.header__secondary-nav > nav {
   display: flex;
   align-self: stretch;
 }
 
-.header__secondary-nav > div > ul {
+.header__secondary-nav > div > ul,
+.header__secondary-nav > nav > ul {
   align-self: center;
 }
 
